ecmascript/parser/tests/typescript-errors/tsc/expressions/unaryOperators/plusOperator/plusOperatorInvalidOperations/input.ts.stderr
error: Unexpected token `;`. Expected this, import, async, function, [ for array literal, { for object literal, @ for decorator, function, class, null, true, false, number, bigint, string, regexp, ` for template literal, (, or an identifier
 --> $DIR/tests/typescript-errors/tsc/expressions/unaryOperators/plusOperator/plusOperatorInvalidOperations/input.ts:5:17
  |
5 | var result1 = b+;   //expect error
  |                 ^

